--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,6 +1,11 @@
 .nav {
   background-color: #f9f9fa;
-  padding: 10px 40px;
+  padding: 10px 50px;
+  box-sizing: border-box; /*magic line*/
+  border-top: 1px solid rgba(121, 121, 121, 0.3);
+  position: fixed;
+  bottom: 0;
+  width: 100%;
 }
 
 .nav__list {
