--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -13,8 +13,10 @@
   display: flex;
   justify-content: space-between;
 }
-.nav__btn {
+
+.nav__link {
   position: relative;
+  color: #2e363e;
 }
 .nav__notification {
   background-color: tomato;
