--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,10 @@
 
 /*screens*/
 @import "screens/login.css";
+@import "screens/friends.css";
 
 body {
+  color: #2e363e;
   font-family: "Open Sans", sans-serif;
   height: 1000vh;
 }
